# importit

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README.rst  make.bat  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
importit/: __init__.py  importer.py
importit/util/: file.py  module.py
tests/fixtures/: foo.py  foo.txt  good_big_gist_response.json  good_small_gist_response.json
tests/test_importer/: test_import_code.py  test_import_gist.py  test_import_local_file.py  test_import_remote_file.py
