[metadata]
name = importit
version = 0.1.0
description = Import python code from anywhere.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Divya Jain
author_email = dkj@somaiya.edu
url = https://github.com/divykj/importit
download_urls = https://pypi.org/project/importit
project_urls =
	Documentation = https://github.com/divykj/importit
	Code = https://github.com/divykj/importit
	Issue tracker = https://github.com/divykj/importit/issues
classifiers =
    Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
    Topic :: Utilities
    Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.6
packages =
    importit

[options.extras_require]
dev = 
  pre-commit
test = 
	flake8
	mypy
	pytest
	pytest-cov
publish = 
	twine

[flake8]
max_complexity = 10
# Matching black max-line-length of 88
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203

[mypy]
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
pretty = True
