[metadata]
name = importit
version = 0.1.3
description = Import python code from anywhere.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Divya Jain
author_email = divykjain@gmail.com
url = https://github.com/divykj/importit
download_urls = https://pypi.org/project/importit
project_urls =
    Documentation = https://github.com/divykj/importit
    Code = https://github.com/divykj/importit
    Issue tracker = https://github.com/divykj/importit/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Utilities
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.6
packages = find:

[options.extras_require]
dev =
    brunette
    flake8
    isort
    pytest
    pytest-cov
    make-to-batch>=0.2.3
publish =
    twine

[tool:brunette]
line-length = 120

[flake8]
max_complexity = 10
max-line-length = 120
extend-ignore =
    E203 # See https://github.com/PyCQA/pycodestyle/issues/373

[coverage:report]
show_missing = True
